# WHO_GHO_API_client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Vignette_WHO_GHO_API_client.ipynb  pyproject.toml
docs/: Makefile  WHO_GHO_API_client.rst  conf.py  example.ipynb  index.rst  make.bat  modules.rst
docs/_build/doctrees/: index.doctree  modules.doctree
docs/_build/html/: WHO_GHO_API_client.html  genindex.html  index.html  py-modindex.html  searchindex.js
docs/_build/html/_modules/: index.html
sphinx_docs/: conf.py
sphinx_docs/_build/doctrees/: WHO_GHO_API_client.doctree  environment.pickle
sphinx_docs/_build/html/: .buildinfo  modules.html  objects.inv  search.html
sphinx_docs/_build/html/_modules/: WHO_GHO_API_client.html
src/WHO_GHO_API_client/: WHO_GHO_API_client.py  __init__.py
tests/: Household air pollution attributable deaths.csv  test_WHO_GHO_API_client.py  test_get_records.py  test_query_parser.py
