[tool.poetry]
name = "WHO_GHO_API_client"
version = "0.1.1"
description = "A hassle-free way to access the WHO Global Health Observatory database!"
authors = ["Toby Law"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tobykylaw/WHO_GHO_API_client"
repository = "https://github.com/tobykylaw/WHO_GHO_API_client"


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
requests = "^2.27.1"
simplejson = "^3.17.6"
numpy = "^1.22.1"
pytest = "^6.2.5"
Sphinx = "^4.4.0"

[tool.poetry.dev-dependencies]
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
